[tool.poetry]
name = "mace-models"
version = "0.1.0"
description = ""
authors = ["Rokas Elijošius <re344@cam.ac.uk>", "Fabian Zills <fzills@icp.uni-stuttgart.de>"]
readme = "README.md"
packages = [{include = "mace_models"}]

[tool.poetry.dependencies]
python = "^3.10"
zntrack = "^0.7.2"
dvc-s3 = "^3"
ase = "^3.22.1"
zndraw = "^0.2"

[tool.poetry.group.mace.dependencies]
mace = {git = "https://github.com/ACEsuit/mace", rev="develop"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
