[tool.poetry]
name = "mace-models"
version = "0.1.4"
description = "Access pre-trained MACE models"
authors = ["Rokas Elijošius <re344@cam.ac.uk>", "Fabian Zills <fzills@icp.uni-stuttgart.de>"]
readme = "README.md"
packages = [{include = "mace_models"}]

[tool.poetry.urls]
repository = "https://github.com/RokasEl/MACE-Models"

[tool.poetry.dependencies]
python = "^3.10"
zntrack = "^0.8.1"
dvc-s3 = "^3.2"
ase = "^3.22"
mace-torch = "^0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["I"]
